[DAQ-3466] fix name clash building NXdata when scan has no detector or monitors
Change-Id: I8b7396a3883f7dadd1a2e4e34e2ec26bd04b3228